[gd_scene load_steps=12 format=2]

[ext_resource path="res://Traps/WallWorm.gd" type="Script" id=1]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-02-00.png" type="Texture" id=3]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-07-00.png" type="Texture" id=5]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-08-00.png" type="Texture" id=6]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-06-00.png" type="Texture" id=7]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-05-00.png" type="Texture" id=8]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-09-00.png" type="Texture" id=9]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-10-00.png" type="Texture" id=10]
[ext_resource path="res://Resources/Traps/sandworm/Sandworm trap - Level 1-04-00.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "bite",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 13 )

[node name="WallWorm" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
